# AI-Enhanced-ROM-Editor-for-Pok-mon-MDES

./: .gitignore  MDES-ROM-Editor.spec  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows-exe.yml
rom_editor/: __init__.py  __main__.py
rom_editor/ai/: assistant.py
rom_editor/games/: __init__.py
rom_editor/games/explorers_sky/: __init__.py  constants.py  dungeons.py  learnsets.py  moves.py  pokemon.py
rom_editor/nds/: __init__.py  narc.py  portrait.py  rom.py
rom_editor/ui/: __init__.py  app.py  history.py
rom_editor/ui/editors/: __init__.py  ai_panel.py  dungeon_editor.py  learnset_editor.py  move_editor.py  pokemon_editor.py  sprite_viewer.py  text_editor.py
scripts/: app.manifest  build_windows.bat  build_windows.ps1  windows_version_info.txt
tests/: __init__.py  test_ai.py  test_dungeons.py  test_learnsets.py  test_moves.py  test_narc.py  test_nds_header.py  test_pokemon.py
