[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-rom-editor-mdes"
version = "0.1.0"
description = "AI-Enhanced ROM Editor for Pokémon Mystery Dungeon: Explorers of Sky"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mdes-editor = "rom_editor.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rom_editor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
